--- a/ArtMarket/frontend/style.css
+++ b/ArtMarket/frontend/style.css
@@ -191,7 +191,7 @@ section {
   justify-content: center;
   padding: 2rem;
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url(../images/art-dajgwkpkb3im2q3u.jpg) no-repeat;
+    url(../images/Home_page_image.webp) no-repeat;
   background-size: cover;
   background-position: center;
 }
