--- a/ArtMarket/frontend/MyProfile.css
+++ b/ArtMarket/frontend/MyProfile.css
@@ -41,3 +41,28 @@ button {
 button:hover {
     background-color: #45a049;
 }
+
+.sidenav {
+    height: 100%;
+    width: 80px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #333;
+    padding-top: 20px;
+}
+
+.sidenav a {
+    padding: 15px 8px;
+    text-decoration: none;
+    font-size: 18px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+    text-align: center;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
